# robotics

./: README.md
camera/StereoVision/: CMakeLists.txt
camera/StereoVision/ADCensusBM/: CMakeLists.txt  adcensuscv.cpp  adcensuscv.h  aggregation.cpp  aggregation.h  common.h  disparityrefinement.cpp  disparityrefinement.h  scanlineoptimization.cpp  stereoprocessor.cpp  stereoprocessor.h
camera/StereoVision/ADCensusBM/config/: adcensus.yaml
camera/StereoVision/ADCensusStereo/: ADCensusStereo.cpp  ADCensusStereo.h  adcensus_types.h  adcensus_util.cpp  adcensus_util.h  cost_computor.cpp  cost_computor.h  cross_aggregator.cpp  cross_aggregator.h  multistep_refiner.cpp  multistep_refiner.h  scanline_optimizer.cpp  scanline_optimizer.h
camera/StereoVision/SemiGlobalMatching/: SemiGlobalMatching.cpp  SemiGlobalMatching.h  sgm_types.h  sgm_util.cpp  sgm_util.h
camera/StereoVision/examples/: fbs_filter.cpp  fbs_filter.h  test_adCensus.cpp  test_adCensusBM.cpp  test_sgm.cpp
camera/StereoVision/stereo_opencv/: .clang-format  CMakeLists.txt  README.md  stereoVision.cpp
camera/practice/: README.md
camera/practice/task1/: .clang-format  CMakeLists.txt  README.md
camera/practice/task1/data/: result.xyz
camera/practice/task1/src/: main.cpp  main.h
camera/practice/task2/: CMakeLists.txt  README.md
camera/practice/task2/src/: guidedfilter.cpp  guidedfilter.h  main.cpp
camera/practice/task3/: .clang-format
camera/practice/task3/icp_nanoflann/: .clang-format  CMakeLists.txt
camera/practice/task3/icp_nanoflann/src/: icp.cpp  icp.h  nanoflann.h  test.cpp
camera/realsense/depth-realsense/: CMakeLists.txt  advanceMode.py  saveImage.cpp  testAlignment.py
camera/realsense/depth-realsense/config/: rs_l515.yaml
dataStructure/tree/binary_tree/traversal/: README.md  iterative_traversal.cpp  recursive_traversal.cpp
dataStructure/tree/kd_tree/: KDTree.h  Point.h  README.md  kdtree.cpp  kdtree.h  search.cpp  test.cpp
dataStructure/tree/octree/: OctreePoint.h  README.md  Vec3.h  octree.cpp  octree.h  test.cpp
localization/: README.md
machine_learning/kmeans/cpu/: Point.h  kmeans.h  test.cpp
machine_learning/kmeans/cuda/: kmeans.cu  kmeans.h  x.txt
machine_learning/ransac/: README.md  point_cloud.cpp
pathPlanning/aStar/: README.md  astar.cpp
perception/: README.md
perception/camera/features/: CMakeLists.txt  README.md  descriptor.h  detector.h  feature.cpp
perception/camera/multiview_geometry/: README.md
perception/lidar/: README.md
perception/lidar/obstacle_detection/: CMakeLists.txt  environment.cpp  processPointClouds.cpp  processPointClouds.h
perception/lidar/obstacle_detection/render/: render.cpp  render.h
